add months, remove possible spaces and quotes in models list
