# o3api/swagger.yml
@@ -102,15 +102,25 @@ paths:
           description: Year to finish data scanning
           default: 2019
           required: false
+        - name: months
+          in: query
+          type: array
+          items:
+            type: integer
+          description: Months to select, if not a whole year
+          default: []
+          required: false
         - name: lat_min
           in: query
           type: integer
           description: Latitude (min) to define the range (-90..90)
+          default: -10
           required: false
         - name: lat_max
           in: query
           type: integer
           description: Latitude (max) to define the range (-90..90)
+          default: 10
           required: false
       responses:
         200:
